# TFG-web/server/swagger_server/swagger/swagger.yaml
@@ -58,6 +58,44 @@ paths:
         "200":
           description: Data deleted succesfully
       x-openapi-router-controller: swagger_server.controllers.default_controller
+  /retrieveData:
+    get:
+      summary: Returns the current uploaded dataset
+      description: it will return the current dataset in json format
+      operationId: retrieve_data_get
+      parameters:
+      - name: xstart
+        in: query
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: integer
+      - name: ystart
+        in: query
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: integer
+      - name: limit
+        in: query
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: integer
+      responses:
+        "200":
+          description: Data array
+          content:
+            application/json:
+              schema:
+                type: object
+                x-content-type: application/json
+        "503":
+          description: No available data
+      x-openapi-router-controller: swagger_server.controllers.default_controller
 components:
   schemas:
     inline_response_200:
@@ -84,4 +122,3 @@ components:
           type: integer
         csv:
           type: string
-
